# Todo-App

./: .gitignore  CMakeLists.txt  README.md
inc/: main_window.h
src/: main.cpp  main_window.cpp
